--- a/index.html
+++ b/index.html
@@ -26,8 +26,12 @@
         </div>
 
         <div class="form-input">
-          <label for="apellido">Apellido:</label>
-          <input type="text" name="apellido" required placeholder="Ingrese su apellido" />
+          <label for="Primer apellido">Primer Apellido:</label>
+          <input type="text" name="apellido" required placeholder="Ingrese su primer apellido" />
+        </div>
+        <div class="form-input">
+          <label for="Segundo apellido">Segundo Apellido:</label>
+          <input type="text" name="apellido" required placeholder="Ingrese su Segundo apellido" />
         </div>
 
         <div class="form-input">
