se actualizo el index

--- a/index.html
+++ b/index.html
@@ -54,6 +54,11 @@
         </div>
 
         <div class="form-input">
+          <label for="celular">telefono residencial:</label>
+          <input type="tel" name="telefono residencial" maxlength="9" placeholder="Ingrese su número de telefono" />
+        </div>
+
+        <div class="form-input">
           <label for="email">Email:</label>
           <input type="email" name="email" required placeholder="Ingrese su correo electrónico" />
         </div>
